Fixed dark mode

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -12,7 +12,7 @@ body,
   @apply bg-cream dark:bg-gray-800;
 }
 
-img,
+.main-frame img,
 .card,
 iframe {
   @apply rounded-xl;
@@ -20,4 +20,8 @@ iframe {
 
 a {
   @apply text-flockyred;
+}
+
+article.card .icon {
+  @apply bg-flockyred border border-flockyred fill-cream;
 }
